package com.nwchat;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class NwchatApplication {

	public static void main(String[] args) {
		SpringApplication.run(NwchatApplication.class, args);
	}

}
